--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: "Light";
+  src: url("../content/fonts/Poppins-Light.otf");
+}
+@font-face {
+  font-family: "Medium";
+  src: url("../content/fonts/Poppins-Medium.otf");
+}
+@font-face {
+  font-family: "Regular";
+  src: url("../content/fonts/Poppins-Regular.otf");
+}
+
+body {
+  font-family: "Light";
+}
 
 .tamano-cabecera {
   height: 84px !important;
@@ -6,7 +22,7 @@
 
 .nombre-empresa {
   /* color: #ffc127; */
-  font-family: arial-black;
+  font-family: "Regular";
 }
 
 .nombre-empresa h1 {
@@ -27,4 +43,7 @@
   border: 3px solid #3f51b5;
   border-radius: 10px;
   width: 102%!important;
+}
+.puesto-de-trabajo:focus {
+    outline:none;
 }
