Se agrega lista

--- a/views/layout/layout.pug
+++ b/views/layout/layout.pug
@@ -37,7 +37,7 @@ html(ng-app='calidad')
       block header
         include ../inclusions/header
       block content 
-    span(flex)
-    div(layout="column" layout-align="end center")
-      block footer 
-        span © BUSSCAR  {{ moment().format('YYYY') }} Todos los derechos reservados
+    //- span(flex)
+    //- div(layout="column" layout-align="end center")
+    //-   block footer 
+    //-     span © BUSSCAR  {{ moment().format('YYYY') }} Todos los derechos reservados
