commit para guardar

--- a/views/inclusions/header.pug
+++ b/views/inclusions/header.pug
@@ -7,7 +7,7 @@ header(ng-controller="header as $cCtr")
       span(flex flex-xs)
       a(href="/" title="Calidad")
         .nombre-empresa
-          h1 CALIDAD
+          h1 BUSSCAR
           span Sistema Integrado de Notificaciones
       span(flex flex-xs)
       md-progress-circular(md-mode="indeterminate" ng-show="$cCtr.mostrarCargadorDeRutas")
