--- a/views/inclusions/header.pug
+++ b/views/inclusions/header.pug
@@ -1,47 +1,48 @@
 header(ng-controller="header as $cCtr")
   md-toolbar.md-primary.md-whiteframe-2dp
     .md-toolbar-tools.tamano-cabecera
+      img.logo(src="/static/images/logo-busscar.png")
       md-button.md-icon-button(aria-label='Menú de opciones' ng-click='$cCtr.abrirMenuIzquierda()')
         //- i.material-icons menu
-        md-icon(md-svg-src='static/content/icons/menu.svg')
+        md-icon(md-svg-src='/static/content/icons/menu.svg')
       span(flex flex-xs)
-      a(href="/" title="Calidad")
+      a(href="/notificaciones/" title="Calidad")
         .nombre-empresa
-          h1 BUSSCAR
-          span Sistema Integrado de Notificaciones
+          b Notificaciones
+          //- span Sistema Integrado de Notificaciones
+      //- span Notificaciones
       span(flex flex-xs)
-      md-progress-circular(md-mode="indeterminate" ng-show="$cCtr.mostrarCargadorDeRutas")
-
-
+      md-icon(md-svg-src='/static/content/icons/user.svg')
+      span.nombre-usuario 
+        b Hola, 
+        | Alejandro Medina
+      md-button.md-icon-button(aria-label='Menú de opciones' ng-click='$cCtr.abrirMenuIzquierda()')
+        md-icon(md-svg-src='/static/content/icons/logout.svg')
   section(layout="row" flex)
+    
     md-sidenav.md-sidenav-left.barra-lateral-izquierda(md-component-id='left' md-whiteframe='4')
       md-toolbar(layout='row')
-        h1.md-toolbar-tools Menú de opciones
+        h1.md-toolbar-tools MENU
         md-button(aria-label='Menú de opciones' ng-click='$cCtr.abrirMenuIzquierda()')
-          md-icon(md-svg-src='static/content/icons/menu.svg')
+          md-icon(md-svg-src='/static/content/icons/back.svg')
       md-content
         md-list-item.md-3-line
-          //- img.md-avatar(ng-src='{{$cCtr.usuarioConectado.atributos.fotografiaRecursoCompleto || "/estatico/estilos/imagenes/logo_terrano_fondo_amarillo.jpg"}}' alt="{{$cCtr.usuarioConectado.atributos.nombreCompleto.completo}}")
           .md-list-item-text(layout='column')
-            h3 {{$cCtr.usuarioConectado.atributos.nombreCompleto.nombres}} 
-            | {{$cCtr.usuarioConectado.atributos.nombreCompleto.apellidos}}
+            h3 Alejandro  
+            | Medina Ruiz
             div(layout='row')
-              h4 {{$cCtr.usuarioConectado.obtenerCargo().texto}}
+              h4 Desarrollador
               span(flex)
-              i.material-icons.cursor-informativo(ng-if='$cCtr.usuarioConectado.atributos.ultimaFechaIngreso') fingerprint
-                md-tooltip(md-direction="bottom") Última fecha de ingreso: {{$cCtr.usuarioConectado.atributos.ultimaFechaIngreso | fechas: 'LL'}} {{$cCtr.usuarioConectado.atributos.ultimaFechaIngreso | fechas: 'LT'}}
+              md-icon(md-svg-src='/static/content/icons/user.svg')
+                //- md-tooltip(md-direction="bottom") 
         md-divider
-        md-sidemenu        
-          md-sidemenu-group(ng-repeat="menu in $cCtr.MENU")
-            md-sidemenu-content(md-icon='{{menu.icono}}' md-heading='{{menu.nombre}}' md-arrow='true')
-              md-sidemenu-button(ng-repeat="submenu in menu.submenu" ui-sref="{{submenu.parametros ? submenu.enlace + '(' + (submenu.parametros | json : 0) + ')' : submenu.enlace}}" ui-sref-active="activo")
-                md-icon(md-svg-src='static/content/icons/menu.svg')
-                | {{submenu.nombre}}
-                //- i.material-icons {{submenu.icono}}
+        md-menu-content(width='4', ng-mouseleave='$mdMenu.close()')
+          md-menu-item(ng-repeat='item in $cCtr.MENU')
+            md-button(href="{{item.url}}")
+              | {{item.nombre}}
         
-      md-button.md-fab.md-fab-bottom-right.my-fab-button(ng-click='$cCtr.cerrarSesion()')
-        md-icon
-          i.material-icons.color-blanco power_settings_new
+      md-button.md-primary.md-fab.md-fab-bottom-right.my-fab-button(ng-click='$cCtr.cerrarSesion()')
+        md-icon(md-svg-src='/static/content/icons/logout.svg')
         md-tooltip(md-direction="left") Salir
 
   
