--- a/views/layout/layout.pug
+++ b/views/layout/layout.pug
@@ -18,10 +18,13 @@
     "/static/javascripts/main.js", 
     "/static/javascripts/factories/toast.js", 
     "/static/javascripts/controllers/header.js", 
+    "/static/javascripts/controllers/login.js", 
     "/static/javascripts/controllers/notificaciones/lista.js",
     "/static/javascripts/controllers/notificaciones/form.js",
     "/static/javascripts/controllers/usuarios/lista.js",
     "/static/javascripts/controllers/usuarios/form.js",
+    "/static/javascripts/controllers/centros/lista.js",
+    "/static/javascripts/controllers/centros/form.js",
   ]
 doctype html
 html(ng-app='calidad')
