--- a/views/centros/lista.pug
+++ b/views/centros/lista.pug
@@ -3,54 +3,45 @@ extends ../layout/layout
 block header
   include ../inclusions/header
 block content
-  .md-whiteframe-2dp(layout-margin layout-padding ng-controller="listaUsuario as $lCtrl")
+  .md-whiteframe-2dp(layout-margin layout-padding ng-controller="listaCentro as $lCtrl")
     div(layout="row" layout-align="center center" flex)
-      h2 Lista de usuarios
+      h2 Lista de centros de trabajo
       md-input-container.md-block(md-no-float='' flex style="margin-bottom: 0;margin-left:40px;" )
         md-icon(md-svg-src='/static/content/icons/search.svg')
         input(ng-model='$lCtrl.search' type='text' placeholder='Buscar...' aria-label='Buscar...' ng-change="$lCtrl.filtrar()")
 
-      md-button.md-raised.md-primary(href="/usuarios/formulario" style="margin-left:20px;") + Crear
+      md-button.md-raised.md-primary(href="/centros/formulario" style="margin-left:20px;") + Crear
       span(flex)
     md-content      
       table.responsive-table
         thead
           tr
-            th(scope='col' ng-click="$lCtrl.ordenarPor('nombre')") 
+            th(scope='col' ng-click="$lCtrl.ordenarPor('linea')") 
               div(layout="row")
-                span Nombre
+                span Linea
                 span(flex)
-                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'nombre'")
-            th(scope='col' ng-click="$lCtrl.ordenarPor('usuarioRed')") 
-              div(layout="row")
-                span(flex)
-                span Usuario de Red
-                span(flex)
-                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'usuarioRed'")
-            th(scope='col' ng-click="$lCtrl.ordenarPor('correo')") 
+                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'linea'")
+            th(scope='col' ng-click="$lCtrl.ordenarPor('codigo')") 
               div(layout="row")
                 span(flex)
-                span Correo
+                span Código
                 span(flex)
-                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'correo'")
-            th(scope='col' ng-click="$lCtrl.ordenarPor('fechaCreacion')") 
+                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'codigo'")
+            th(scope='col' ng-click="$lCtrl.ordenarPor('descripcion')") 
               div(layout="row")
                 span(flex)
-                span Fecha de Creación
+                span Descripción
                 span(flex)
-                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'fechaCreacion'")
+                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'descripcion'")
             th(scope='col' ng-click="$lCtrl.ordenarPor('estado')") 
               div(layout="row")
                 span(flex)
-                span Estado
+                span estado
                 span(flex)
                 md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'estado'")
-            th(scope='col' ng-click="$lCtrl.ordenarPor('idAplicacionMovil')") 
-              div(layout="row")
-                span(flex)
-                span Id Aplicación
-                span(flex)
-                md-icon(md-svg-src="/static/content/icons/sort{{ $lCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$lCtrl.propertyName === 'idAplicacionMovil'")
+            th(scope='col' ) Auditores
+            th(scope='col' ) Usuarios
+            
             th(scope='col' ) Acciones
         tfoot
           tr
@@ -67,17 +58,17 @@ block content
                   md-button.md-icon-button(aria-label='boton' ng-disabled="$lCtrl.pagina == ($lCtrl.totalPaginas - 1)" ng-click="$lCtrl.pagina = $lCtrl.pagina + 1" ) 
                     span.flechas >
         tbody
-          tr(ng-repeat="item in $lCtrl.usuariosFiltrados | limitTo : $lCtrl.registrosXpagina : ($lCtrl.registrosXpagina*$lCtrl.pagina) | orderBy:$lCtrl.propertyName:$lCtrl.reverse | filter:$lCtrl.search")
-            th(scope='row') {{ item.nombre }}
-            td(data-title='Usuario de Red :') {{ item.usuarioRed }}
-            td(data-title='Correo :') {{ item.correo }}
-            td(data-title='Fecha de Creación :') {{ item.fechaCreacion | date : 'short'}}
-            td(data-title='Estado :') {{ item.estado }}
-            td(data-title='Estado :') {{ item.idAplicacionMovil }}
+          tr(ng-repeat="item in $lCtrl.centrosFiltrados | limitTo : $lCtrl.registrosXpagina : ($lCtrl.registrosXpagina*$lCtrl.pagina) | orderBy:$lCtrl.propertyName:$lCtrl.reverse | filter:$lCtrl.search")
+            th(scope='row') {{ $lCtrl.obtenerLinea(item.linea) }}
+            td(data-title='Centro de Red :') {{ item.codigo }}
+            td(data-title='Centro de Red :') {{ item.descripcion }}
+            td(data-title='Correo :') {{ item.estado }}
+            td(data-title='Correo :') {{ item.idAuditores.split(",").length }}
+            td(data-title='Fecha de Creación :') {{ item.idUsuarios.split(",").length }}
             td(data-title='Acciones :') 
-              md-button.md-icon-button(aria-label='boton' href="/usuarios/formulario/{{ item.id }}" ) 
+              md-button.md-icon-button(aria-label='boton' href="/centros/formulario/{{ item.idCentro }}" ) 
                 md-icon(md-svg-src='/static/content/icons/edit.svg')
-              md-button.md-icon-button(aria-label='boton' ng-click="$lCtrl.confirmarEliminar($event, item.id)") 
+              //- md-button.md-icon-button(aria-label='boton' ng-click="$lCtrl.confirmarEliminar($event, item.idCentro)") 
                 md-icon(md-svg-src='/static/content/icons/delete.svg' style="color:red;")
 
     div(style='visibility: hidden')
