--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,11 +55,15 @@ md-content {
   min-height: 80pt;
   height: 80pt;
 }
+.puesto-de-trabajo {
+  cursor: pointer;
+}
+
 .w-100 {
   width: 100%!important;
 }
 .puesto-activo {
-  border: 3px solid #3f51b5;
+  border: 5px solid #3f51b5;
   border-radius: 10px;
   width: 102%!important;
 }
