se mejora consultas

--- a/views/layout/layout.pug
+++ b/views/layout/layout.pug
@@ -35,6 +35,7 @@ html(ng-app='calidad')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(keywords="Calidad")
     meta(description="Calidad")
+    link(rel='icon', href='/static/imagens/favicon.ico', type='image/x-icon')
     each stylesheet in stylesheets
       link(rel='stylesheet', href=stylesheet)
     each javascript in javascripts
